Version 1.4
-----------
  * Added a "--pragma" option to retain #pragma in the output.
  * Fixed a number of obscure corner cases involving the interaction of
    multiple features e.g. foo##__LINE__.

Version 1.3
-----------
  * Added a "--cpp" option for drop-in compatibility with standard cpp.
    It causes cpphs to accept standard cpp flags and translate
    them to cpphs equivalents.  Compatibility options include: -o, -ansi,
    -traditional, -stdc, -x, -include, -P, -C, -CC, -A.  The file
    behaviour is different too - if two filenames are given on the
    commandline, then the second is treated as the output location.
  * Fixed a corner-case bug in evaluating chained and overlapping #ifdefs.

Version 1.2
-----------
  * Re-arranged the source files into hierarchical libraries.
  * Exposed the library interface as an installable Cabal package, with
    Haddock documentation.
  * Added the --unlit option, for removing literate-style comments.

Version 1.1
-----------
  * Fix the .cabal way of building cpphs.
  * Update the --version reported (forgotten in 1.0, which still reports 0.9)
  * No longer throws an error when given an empty file as input.

Version 1.0
-----------
  * Add a compatibility script cpphs.compat, allowing cpphs to act as
    a drop-in replacement for cpp, e.g.
        ghc -cpp -pgmP cpphs.compat
  * Place quotes around replacements for special macros __FILE__, __DATE__,
    and __TIME__.
  * If no files are specified, read from stdin.
  * Ignore #! lines (e.g. in scripts)
  * Parse -D commandline options once only, and consistently with cpp,
    i.e. -Dfoo means foo=1
  * Fix compatibility with preprocessors like hsc2hs, which use
    non-cpp directives like #def.  They are now passed through to the
    output with a warning to stderr.

Version 0.9
-----------
  * Bugfix for ghc-6.4 -O: flush the output buffer.

Version 0.8
-----------
  * Added the --text option, to signify the input should not